@@ -6,13 +6,14 @@ import com.netflix.spinnaker.echo.model.Trigger
 import com.netflix.spinnaker.echo.test.RetrofitStubs
 import com.netflix.spinnaker.kork.artifacts.model.Artifact
 import com.netflix.spinnaker.kork.artifacts.model.ExpectedArtifact
+import com.netflix.spinnaker.kork.expressions.config.ExpressionProperties
 import spock.lang.Shared
 import spock.lang.Specification
 import spock.lang.Subject
 
 class ExpectedArtifactExpressionEvaluationPostProcessorSpec extends Specification implements RetrofitStubs {
   @Subject
-  def artifactPostProcessor = new ExpectedArtifactExpressionEvaluationPostProcessor(EchoObjectMapper.getInstance())
+  def artifactPostProcessor = new ExpectedArtifactExpressionEvaluationPostProcessor(EchoObjectMapper.getInstance(), new ExpressionProperties())
 
   @Shared
   def trigger = Trigger.builder()
@@ -74,5 +75,30 @@ class ExpectedArtifactExpressionEvaluationPostProcessorSpec extends Specificatio
 
     then:
     noExceptionThrown()
+  }
+
+  def 'allows calling toString on an UnmodifiableMap'() {
+    given:
+    def artifact = ExpectedArtifact.builder()
+      .matchArtifact(
+        Artifact.builder()
+          // This fails under java 17 without something like
+          // --add-opens=java.base/java.util=ALL-UNNAMED as an argument to the jvm.
+          .name('${ {"foo": "bar"}.toString() }')
+          .version('77')
+          .type('maven/file')
+          .build())
+      .id('goodId')
+      .build()
+
+    def inputPipeline = createPipelineWith([artifact], trigger).withTrigger(trigger)
+
+    when:
+    def outputPipeline = artifactPostProcessor.processPipeline(inputPipeline)
+    def evaluatedArtifact = outputPipeline.expectedArtifacts[0].matchArtifact
+
+    then:
+    evaluatedArtifact.name == '{foo=bar}'
+    evaluatedArtifact.version == '77'
   }
 }
